# TiktokShares

./: README.md  main.py  pyproject.toml
Data/: Lists.py
